[package]
name = "PracticasMetaheuristicas"
version = "0.1.0"
authors = ["Sergio Quijano Rey <sergiquijano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error="0.2.3"        # Raising simple errors
csv = "1.1"                 # Read csv files
rand = "0.8.3"              # Generate random numbers
ndarray = "0.14.0"          # Work with matrices and vectors
lazy_static = "1.4.0"       # Create a singleton
assert_approx_eq = "1.1.0"  # Assert almost equals
